--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: 400;
     src: local("Inter"),
-        url(fonts/Inter-Regular.ttf);
+        url(/fonts/Inter-Regular.ttf);
 }
 
 @font-face {
@@ -12,7 +12,7 @@
     font-weight: 600;
     font-display: swap;
     src: local("Inter"),
-        url(fonts/Inter-SemiBold.ttf);
+        url(/fonts/Inter-SemiBold.ttf);
 }
 
 @font-face {
@@ -20,7 +20,7 @@
     font-style: normal;
     font-weight: 300;
     src: local("Inter"),
-        url(fonts/Inter-Light.ttf);
+        url(/fonts/Inter-Light.ttf);
 }
 
 @font-face {
@@ -28,7 +28,7 @@
     font-style: normal;
     font-weight: 500;
     src: local("Inter"),
-        url(fonts/Inter-Medium.ttf);
+        url(/fonts/Inter-Medium.ttf);
 }
 
 @font-face {
@@ -36,7 +36,7 @@
     font-style: normal;
     font-weight: 700;
     src: local("Inter"),
-        url(fonts/Inter-Bold.ttf);
+        url(/fonts/Inter-Bold.ttf);
 }
 
 
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6, p {
 .header__flex {
     display: flex;
     flex-direction: column;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     justify-content: space-between;
 }
 
@@ -844,7 +844,7 @@ textarea::placeholder {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* min-height: 100vh; */
+    min-height: 100vh;
 }
 
 .aboutUs__content h2 {
@@ -931,7 +931,7 @@ textarea::placeholder {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* min-height: 100vh; */
+    min-height: 100vh;
 }
 
 .services_h2 {
@@ -1017,7 +1017,7 @@ textarea::placeholder {
     flex-direction: column;
     justify-content: space-between;
     padding: 72px 0px;
-    /* min-height: 100vh; */
+    min-height: 100vh;
 }
 
 .feauturing__header {
@@ -1534,7 +1534,7 @@ textarea::placeholder {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     padding: 20px 0px;
 }
 
@@ -1811,7 +1811,7 @@ g:hover .circle_big {
 .work__grid {
     display: flex;
     flex-direction: column;
-    /* min-height: 93vh; */
+    min-height: 93vh;
     justify-content: space-around;
 }
 
