--- a/styles/main.css
+++ b/styles/main.css
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6, p {
 .header__flex {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     justify-content: space-between;
 }
 
