--- a/styles/main.css
+++ b/styles/main.css
@@ -161,6 +161,7 @@ h1, h2, h3, h4, h5, h6, p {
     flex-direction: column;
     /* min-height: 100vh; */
     height: 100%;
+    max-height: 100%;
     justify-content: space-between;
 }
 
@@ -168,8 +169,8 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-top: 50px; */
+    /* padding-bottom: 50px; */
 }
 
 .logo {
@@ -369,7 +370,7 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     justify-content: space-between;
     align-items: end;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 .header__footer p {
@@ -3145,7 +3146,7 @@ g:hover .circle_big {
     }
 
     .header__footer {
-        padding-bottom: 33px;
+        /* padding-bottom: 33px; */
     }
 
     .header__footer p {
@@ -5584,7 +5585,7 @@ g:hover .circle_big {
 
 @media only screen and (max-height: 811px) {
     .header__nav {
-        padding-top: 40px;
+        /* padding-top: 40px; */
     }
 
    
