--- a/styles/main.css
+++ b/styles/main.css
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 .header {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #121212;
 }
 
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6, p {
     /* min-height: 100vh; */
     height: 100%;
     max-height: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .header__nav {
