--- a/styles/main.css
+++ b/styles/main.css
@@ -152,31 +152,27 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 .header {
-    /* min-height: 100vh; */
     background-color: #121212;
 }
 
 .header__flex {
     display: flex;
     flex-direction: column;
-    /* min-height: 100vh; */
     height: 100%;
     max-height: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 50px 0px;
 }
 
 .header__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding-top: 50px; */
-    /* padding-bottom: 50px; */
 }
 
 .logo {
     display: flex;
     align-self: flex-end;
-    /* justify-content: center; */
 }
 
 .header__nav img {
@@ -194,7 +190,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .nav__list {
     display: flex;
-    gap: 27px;
+    gap: 30px;
 }
 
 .nav__list {
