--- a/styles/main.css
+++ b/styles/main.css
@@ -842,7 +842,7 @@ textarea::placeholder {
 
 
 .aboutUs {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #121212;
 
 }
@@ -852,6 +852,17 @@ textarea::placeholder {
     justify-content: space-between;
     align-items: center;
     min-height: 100vh;
+    /* height: 100%; */
+    /* max-height: 100%; */
+    
+}
+
+.aboutUs__content {
+    /* flex: 1 1 auto; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* height: 100%; */
+    /* max-height: 100%; */
 }
 
 .aboutUs__content h2 {
@@ -4241,8 +4252,8 @@ g:hover .circle_big {
     
     .nav {
         display: flex;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         top: 0;
         left: -100%;
         flex-direction: column;
@@ -5190,7 +5201,8 @@ g:hover .circle_big {
     
 
     .header__footer__right {
-        gap: 5px;
+        gap: 10px;
+        justify-content: end;
     }
 
     .header__footer p {
@@ -5457,12 +5469,6 @@ g:hover .circle_big {
     .slogan__button_right {
         padding: 12px 43px 11px 46px;
         border-radius: 8px;
-    }
-
-    
-
-    .header__footer__right {
-        gap: 5px;
     }
 
     .header__footer p {
