--- a/styles/main.css
+++ b/styles/main.css
@@ -851,18 +851,19 @@ textarea::placeholder {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
     /* height: 100%; */
     /* max-height: 100%; */
     
 }
 
 .aboutUs__content {
+
     /* flex: 1 1 auto; */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* height: 100%; */
-    /* max-height: 100%; */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-height: 100%;
 }
 
 .aboutUs__content h2 {
