--- a/styles/main.css
+++ b/styles/main.css
@@ -4435,7 +4435,12 @@ g:hover .circle_big {
     }
 
     .services__body {
-        gap: 125px;
+        gap: 0px;
+        height: 76%;
+    }
+
+    .services__flex {
+        justify-content: space-evenly;
     }
     
     .services_h2 {
@@ -4445,11 +4450,18 @@ g:hover .circle_big {
     .services__body p {
         font-size: 21px;
         max-width: 520px;
+        margin-bottom: 0px;
     }
 
     .services__body_a {
         font-size: 28px;
+        
     }  
+
+    .services__body__footer {
+        height: 100%;
+        justify-content: space-evenly;
+    }
 
     .services__footer_mobile {
         display: flex;
@@ -4881,12 +4893,11 @@ g:hover .circle_big {
     }
 
     .mobile_img {
-        width: 300px;
+        width: 280px;
     }
 
     .services__body p {
         font-size: 18px;
-        margin-bottom: 65px;
     }
 
     .services__body_a {
@@ -5516,16 +5527,14 @@ g:hover .circle_big {
 
 
 
-    .services__flex {
-        padding: 40px 0px;
-    }
+    
 
     .mobile_img {
-        width: 280px;
+        width: 250px;
     }
 
     .services__body {
-        gap: 100px;
+        /* height: 80%; */
     }
 
 
