--- a/styles/main.css
+++ b/styles/main.css
@@ -1534,20 +1534,18 @@ textarea::placeholder {
 
 
 .map {
-    min-height: 100vh;
     background-color: #121212;
     position: relative;
 }
 
-.map_img {
-    max-width: 100%;
-}
 
 .map__grid {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    min-height: 100vh;
+    height: 100%;
+    max-height: 100%;
+    /* min-height: 100vh; */
     padding: 20px 0px;
 }
 
