--- a/styles/main.css
+++ b/styles/main.css
@@ -1542,7 +1542,7 @@ textarea::placeholder {
 .map__grid {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     height: 100%;
     max-height: 100%;
     /* min-height: 100vh; */
@@ -1566,7 +1566,7 @@ textarea::placeholder {
 .map__body .svg {
     max-width: 100%;
     /* height: auto; */
-    max-height: 80vh;
+    /* max-height: 80vh; */
     /* position: relative; */
 }
 
