--- a/styles/main.css
+++ b/styles/main.css
@@ -1542,11 +1542,11 @@ textarea::placeholder {
 .map__grid {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 100%;
     max-height: 100%;
     /* min-height: 100vh; */
-    padding: 20px 0px;
+    /* padding: 20px 0px; */
 }
 
 .map__header {
@@ -1564,9 +1564,9 @@ textarea::placeholder {
 }
 
 .map__body .svg {
-    max-width: 100%;
+    /* max-width: 100%; */
     /* height: auto; */
-    /* max-height: 80vh; */
+    max-height: 73vh;
     /* position: relative; */
 }
 
