--- a/styles/main.css
+++ b/styles/main.css
@@ -4545,8 +4545,7 @@ g:hover .circle_big {
         width: 485px;
         max-width: 100%;
         flex-wrap: wrap;
-        column-gap: 15px;
-        row-gap: 15px;
+        gap: 15px;
         justify-content: center;
     }
 
