--- a/styles/main.css
+++ b/styles/main.css
@@ -5158,7 +5158,7 @@ address a {
     }
 
     .work__grid {
-        padding: 20px 0px;
+        /* padding: 20px 0px; */
     }
 
 
@@ -5690,7 +5690,7 @@ address a {
 
 }
 
-@media only screen and (max-width: 395px) {
+@media only screen and (max-width: 390px) {
 
     
 
